<resources>
    <string name="app_name">Sentinel</string>
    <string name="no_camera">No camera</string>
    <string name="msg_nocamera">This device does not have a camera</string>
    <string name="ok">OK</string>
    <string name="msg_errorcamera">Error connecting to the camera</string>
    <string name="msg_novideoselected">No video file is selected.</string>
    <string name="select_video">Select video</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="camera_description">Start camera motion detection.</string>
    <string name="video">Video</string>
    <string name="video_description">Play a video and display the movement regions.</string>
    <string name="picture">Picture</string>
    <string name="picture_description">Compare two images and show the different regions.</string>
    <string name="select_picture1">Select picture 1</string>
    <string name="select_picture2">Select picture 2</string>
    <string name="compare">Compare</string>
    <string name="stabilization_enabled">Stabilization enabled</string>
    <string name="stabilization_sensitivity">Stabilization sensitivity</string>
    <string name="difference_sensitivity">Difference sensitivity</string>
    <string name="play_sound_enabled">Play sound enabled</string>
    <string name="record_pictures">Record pictures</string>
    <string name="record_videos">Record videos</string>
    <string name="record_description">Records while there is a motion detected and until there is free space on the external storage.\n%1$s</string>
    <string name="about">About</string>
    <string name="license">License</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="blank_screen">Blank Screen</string>
    <string name="difference_update">Difference update interval</string>
    <string name="background_record_time">Background record time</string>
    <string name="enable_device_admin">Enable device admin</string>
    <string name="enable_device_admin_description">Locks device screen when application goes to background on Camera recording.</string>
</resources>
