<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorPrimary"
    tools:context="com.blogspot.techzealous.sentinel.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="16dp"
        android:orientation="vertical"
        android:id="@+id/linearLayoutRootSettings">

        <RelativeLayout
            android:id="@+id/relativeLayoutStabilizationSettings"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/stabilization_enabled"
                android:id="@+id/textViewStabilizationSettings"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:enabled="false"
                android:id="@+id/checkBoxStabilizationSettings"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/stabilization_sensitivity"
            android:id="@+id/textViewStabilizationSensitivitySettings"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/difference_sensitivity"
            android:id="@+id/textViewDifferenceSensitivitySettings"/>

        <RelativeLayout
            android:id="@+id/relativeLayoutPlaySoundSettings"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/play_sound_enabled"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/checkBoxPlaySoundSettings"
                android:id="@+id/textViewPlaySoundSettings" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:enabled="false"
                android:id="@+id/checkBoxPlaySoundSettings"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutPicturesSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/checkBoxRecordPicturesSettings"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/record_pictures"
                android:id="@+id/textViewRecordPicturesSettings"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:enabled="false"
                android:id="@+id/checkBoxRecordPicturesSettings"/>

            <TextView
                android:id="@+id/textViewRecordPicturesDescSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewRecordPicturesSettings"
                android:layout_toStartOf="@+id/checkBoxRecordPicturesSettings"
                android:text="@string/record_description"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutVideosSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/checkBoxRecordVideosSettings"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/record_videos"
                android:id="@+id/textViewRecordVideosSettings"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:enabled="false"
                android:id="@+id/checkBoxRecordVideosSettings"/>

            <TextView
                android:id="@+id/textViewRecordVideosDescSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewRecordVideosSettings"
                android:layout_toStartOf="@+id/checkBoxRecordVideosSettings"
                android:text="@string/record_description"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutBlankScreenSettings"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingStart="0dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/blank_screen"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/checkBoxBlankScreenSettings"
                android:id="@+id/textViewBlankScreenSettings" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:enabled="false"
                android:id="@+id/checkBoxBlankScreenSettings"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/difference_update"
            android:id="@+id/textViewDifferenceUpdate"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/background_record_time"
            android:id="@+id/textViewBackgroundRecordTime"/>

        <RelativeLayout
            android:id="@+id/relativeLayoutDeviceAdmin"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingStart="0dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/enable_device_admin"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/checkBoxDeviceAdmin"
                android:id="@+id/textViewDeviceAdmin" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:enabled="false"
                android:id="@+id/checkBoxDeviceAdmin"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>