<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.blogspot.techzealous.sentinel.PictureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/select_picture1"
            android:id="@+id/buttonSelect1PictureActivity"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:id="@+id/textViewSelect1PictureActivity"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/select_picture2"
            android:id="@+id/buttonSelect2PictureActivity"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:id="@+id/textViewSelect2PictureActivity"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/compare"
            android:id="@+id/buttonComparePictureActivity"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/imageViewDifferencePictureActivity"/>

    </LinearLayout>
</ScrollView>
